--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@types/chai": "^4.2.1",
     "@types/mocha": "^5.2.7",
+    "@types/node": "^12.7.4",
     "@types/sinon": "^7.0.13",
     "@types/sinon-chai": "^3.2.3",
     "chai": "^4.2.0",
